aii lmaop